# bitbank-auto-transaction

./: .dockerignore  Cargo.toml  Dockerfile  compose.yml
src/: client.rs  main.rs
