[package]
name = "bitbank-auto-transaction"
version = "0.1.0"
edition = "2021"

[dependencies]
chrono = { version = "0.4.39", features = ["serde"] }
dotenv = "0.15.0"
futures-util = "0.3.31"
hmac = "0.12.1"
reqwest = { version = "0.12.12", features = ["rustls-tls", "gzip", "json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sha2 = "0.10.8"
tokio = { version = "1.43.0", features = ["macros"] }
tokio-tungstenite = { version = "0.26.2", features = ["rustls-tls-native-roots"] }

[profile.release]
strip = true
